fix: do not wrap icon-text

--- a/src/components/icon-text.module.scss
+++ b/src/components/icon-text.module.scss
@@ -3,4 +3,5 @@
     height: 1.5rem;
     width: 1rem;
   }
+  flex-wrap: nowrap;
 }
